--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -330,16 +330,10 @@ nav:
         - Type conversion: 3.ngql-guide/3.data-types/9.type-conversion.md
         - Geography: 3.ngql-guide/3.data-types/10.geography.md
 
-      - Variables and composite queries:
-        - Composite queries: 3.ngql-guide/4.variable-and-composite-queries/1.composite-queries.md
-        - User-defined variables: 3.ngql-guide/4.variable-and-composite-queries/2.user-defined-variables.md
-        - Property reference: 3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
-
       - Operators:
           - Comparison: 3.ngql-guide/5.operators/1.comparison.md
           - Boolean: 3.ngql-guide/5.operators/2.boolean.md
           - Pipe: 3.ngql-guide/5.operators/4.pipe.md
-          - Property reference: 3.ngql-guide/5.operators/5.property-reference.md
           - Set: 3.ngql-guide/5.operators/6.set.md
           - String: 3.ngql-guide/5.operators/7.string.md
           - List: 3.ngql-guide/5.operators/8.list.md
@@ -400,7 +394,12 @@ nav:
           - YIELD: 3.ngql-guide/8.clauses-and-options/yield.md
           - WITH: 3.ngql-guide/8.clauses-and-options/with.md
           - UNWIND: 3.ngql-guide/8.clauses-and-options/unwind.md
-#          - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md          
+          - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md      
+
+      - Variables and composite queries:
+        - Composite queries: 3.ngql-guide/4.variable-and-composite-queries/1.composite-queries.md
+        - User-defined variables: 3.ngql-guide/4.variable-and-composite-queries/2.user-defined-variables.md
+        - Property references: 3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md    
 
       - Space statements:
           - CREATE SPACE: 3.ngql-guide/9.space-statements/1.create-space.md
@@ -692,16 +691,10 @@ nav:
         - 类型转换: 3.ngql-guide/3.data-types/9.type-conversion.md
         - 地理空间: 3.ngql-guide/3.data-types/10.geography.md
 
-      - 变量和复合查询:
-        - 复合查询: 3.ngql-guide/4.variable-and-composite-queries/1.composite-queries.md
-        - 自定义变量: 3.ngql-guide/4.variable-and-composite-queries/2.user-defined-variables.md
-        - 引用属性: 3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
-
       - 运算符:
           - 比较符: 3.ngql-guide/5.operators/1.comparison.md
           - 布尔符: 3.ngql-guide/5.operators/2.boolean.md
           - 管道符: 3.ngql-guide/5.operators/4.pipe.md
-          - 属性引用符: 3.ngql-guide/5.operators/5.property-reference.md
           - 集合运算符: 3.ngql-guide/5.operators/6.set.md
           - 字符串运算符: 3.ngql-guide/5.operators/7.string.md
           - 列表运算符: 3.ngql-guide/5.operators/8.list.md
@@ -760,6 +753,11 @@ nav:
           - WITH: 3.ngql-guide/8.clauses-and-options/with.md
           - UNWIND: 3.ngql-guide/8.clauses-and-options/unwind.md
 #          - INNER JOIN: 3.ngql-guide/8.clauses-and-options/joins.md
+
+      - 变量和复合查询:
+        - 复合查询: 3.ngql-guide/4.variable-and-composite-queries/1.composite-queries.md
+        - 自定义变量: 3.ngql-guide/4.variable-and-composite-queries/2.user-defined-variables.md
+        - 引用属性: 3.ngql-guide/4.variable-and-composite-queries/3.property-reference.md
 
       - 图空间语句:
           - CREATE SPACE: 3.ngql-guide/9.space-statements/1.create-space.md
