--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,10 @@ site_author: NebulaGraph
 site_name: NebulaGraph Database Manual
 site_url: https://docs.nebula-graph.io/
 docs_dir: docs-2.0-en
-copyright: Copyright &copy; 2023 NebulaGraph
+copyright: > 
+  Copyright &copy; 2018 - 2024 NebulaGraph - 
+  <a href="#__consent">Change cookie settings</a>
+
 # Modify this line in each version upgrade release
 edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0-en/'
 # en.end
@@ -14,9 +17,9 @@ edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0-en/'
 site_name: NebulaGraph Database 手册 
 site_url: https://docs.nebula-graph.com.cn/  
 docs_dir: docs-2.0-zh
+copyright: Copyright &copy; 2018 - 2024 NebulaGraph - 浙ICP备20010487号
 # Modify this line in each version upgrade release
-edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0-zh/'
-copyright: Copyright &copy; 2023 NebulaGraph - 浙ICP备20010487号
+edit_uri: 'https://github.com/vesoft-inc/nebula-docs/edit/v3.6.0/docs-2.0-zh/'    
 # zh.end
 
 repo_name: 'vesoft-inc/nebula'
@@ -185,7 +188,30 @@ extra:
 # zh.begin
     property: G-BGGB2REDGM
 # zh.end    
-  # branch represents code names (git clone). release represents version number used in texts.
+
+# en.begin  
+# Cookie consent is required by laws including the General Data Protection Regulation (GDPR) in the EU, and the California Consumer Privacy Act (CCPA) in California, USA.
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us
+      make our documentation better.
+      
+    cookies:
+      github:
+        name: GitHub
+        checked: true
+      analytics:
+        name: Google Analytics
+        checked: true  
+    actions:
+      - accept
+      - reject  
+# en.end       
+# branch represents code names (git clone). release represents version number used in texts.  
+
   version:
     provider: mike
   social:
